--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.22.0",
+    "axios": "^0.19.0",
+    "google-map-react": "^1.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-toastify": "^5.3.2",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "styled-components": "^4.3.2",
+    "styled-reset": "^3.0.2",
     "typescript": "^3.5.2"
   },
   "scripts": {
@@ -42,6 +49,8 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.0",
     "@types/react-router": "^5.0.2",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/react-toastify": "^4.0.2",
     "@types/redux-actions": "^2.6.1",
     "@types/styled-components": "^4.1.16"
   }
