--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@egjs/flicking-plugins": "^3.1.0",
+    "@egjs/react-flicking": "^3.0.0",
     "antd": "^3.22.0",
     "axios": "^0.19.0",
     "google-map-react": "^1.1.4",
@@ -14,6 +16,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-toastify": "^5.3.2",
+    "react-transition-group": "^4.2.2",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "styled-components": "^4.3.2",
