--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,47 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Remeet",
+  "name": "Remeet",
+  "swtart_url": "/",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/asset/apple-touch-icon-57x57.png",
+      "size": "57x57",
+      "type": "image/png"
+    },
+    {
+      "src": "/asset/apple-touch-icon-60x60.png",
+      "size": "60x60",
+      "type": "image/png"
+    },
+    {
+      "src": "/asset/apple-touch-icon-72x72.png",
+      "size": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "/asset/apple-touch-icon-76x76.png",
+      "size": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "/asset/apple-touch-icon-114x114.png",
+      "size": "114x114",
+      "type": "image/png"
+    },
+    {
+      "src": "/asset/apple-touch-icon-120x120.png",
+      "size": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "/asset/apple-touch-icon-144x144.png",
+      "size": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/asset/apple-touch-icon-152x152.png",
+      "size": "152x152",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
