--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd": "^3.22.0",
     "axios": "^0.19.0",
     "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
